--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,14 +22,17 @@ flutter:
   uses-material-design: true
 
 
-  # assets:
-    # - assets/images/
+  assets:
+    - assets/images/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/Cairo/Cairo-Regular.ttf
+        
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter/Inter_18pt-Regular.ttf
 
 
 
