--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core:
-  firebase_auth:
+  # firebase_auth:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
