--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ flutter:
   uses-material-design: true
 
 
-  # assets:
-  #   - assets/images/
+  assets:
+    - assets/images/
 
   fonts:
     - family: Cairo
