--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_dotenv:
   flutter_localizations:
     sdk: flutter
