add Shared Preferences Manager

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_dotenv:
   flutter_localizations:
     sdk: flutter
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_lints:
