--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_dotenv:
   flutter_localizations:
     sdk: flutter
+  get_it: ^8.0.2
   shared_preferences: ^2.3.3
 
 dev_dependencies:
