--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.16
   get_it: ^8.0.2
   logger: ^2.5.0
   shared_preferences: ^2.3.3
@@ -32,6 +33,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/svg/
     - .env.prod
     - .env.dev
     - lang/en.json
