--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^2.0.16
   get_it: ^8.0.2
   logger: ^2.5.0
+  pin_code_fields: ^8.0.1
   shared_preferences: ^2.3.3
 
 dev_dependencies:
