change name from SmartCare to CurAi

--- a/firebase.json
+++ b/firebase.json
@@ -1,41 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "smartcare-app-8a32a",
-          "appId": "1:651753091974:android:dfb4461688c23dcaf77207",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "ios": {
-        "default": {
-          "projectId": "smartcare-app-8a32a",
-          "appId": "1:651753091974:ios:68b281404b79d43cf77207",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "macos": {
-        "default": {
-          "projectId": "smartcare-app-8a32a",
-          "appId": "1:651753091974:ios:68b281404b79d43cf77207",
-          "uploadDebugSymbols": false,
-          "fileOutput": "macos/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "smartcare-app-8a32a",
-          "configurations": {
-            "android": "1:651753091974:android:dfb4461688c23dcaf77207",
-            "ios": "1:651753091974:ios:68b281404b79d43cf77207",
-            "macos": "1:651753091974:ios:68b281404b79d43cf77207",
-            "web": "1:651753091974:web:e6671a228a5806aaf77207",
-            "windows": "1:651753091974:web:d64eb9899a61c8d5f77207"
-          }
-        }
-      }
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"curai-app","appId":"1:563850624574:android:ab67baf80482632a28db6f","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"curai-app","configurations":{"android":"1:563850624574:android:ab67baf80482632a28db6f","ios":"1:563850624574:ios:fe41d2b3fad84ea028db6f","macos":"1:563850624574:ios:fe41d2b3fad84ea028db6f","web":"1:563850624574:web:7d384b2ec8cc3b3328db6f","windows":"1:563850624574:web:ea116452504a2f0628db6f"}}}}}}
