--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,11 +9,11 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.graduation.smartcareAppMobile</string>
+	<string>com.graduation.curaiAppMobile</string>
 	<key>PROJECT_ID</key>
-	<string>smartcare-app-8a32a</string>
+	<string>CurAi-app-8a32a</string>
 	<key>STORAGE_BUCKET</key>
-	<string>smartcare-app-8a32a.firebasestorage.app</string>
+	<string>CurAi-app-8a32a.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
