--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "smartcare_app_mobile",
-    "short_name": "smartcare_app_mobile",
+    "name": "curai_app_mobile",
+    "short_name": "curai_app_mobile",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "SmartCare is an innovative Smart Medical Appointment Booking System designed to simplify and enhance the process of scheduling medical appointments. This mobile application, built with Flutter, offers a seamless experience for users to search for doctors, book appointments, and receive personalized recommendations through an AI-powered chatbot.",
+    "description": "CurAi is an innovative Smart Medical Appointment Booking System designed to simplify and enhance the process of scheduling medical appointments. This mobile application, built with Flutter, offers a seamless experience for users to search for doctors, book appointments, and receive personalized recommendations through an AI-powered chatbot.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
