--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   connectivity_plus:
   cupertino_icons:
+  expansion_tile_card: ^3.0.0
   firebase_core:
   flutter:
     sdk: flutter
