--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+    - assets/svg/doctor_speciality/
     - .env.prod
     - .env.dev
     - lang/en.json
