--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_dotenv:
+  flutter_gemini: ^3.0.0
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.9.3
