--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_gemini: ^3.0.0
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.7.4+3
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.16
   get_it: ^8.0.2
