--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_dotenv:
-  flutter_dynamic_icon: ^2.1.0
+  # flutter_dynamic_icon:
   flutter_gemini: ^3.0.0
   flutter_localizations:
     sdk: flutter
