--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   carousel_slider: ^5.0.0
   connectivity_plus:
   cupertino_icons:
+  device_preview: ^1.2.0
   expansion_tile_card: ^3.0.0
   firebase_core:
   flutter:
