--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
   carousel_slider: ^5.0.0
   connectivity_plus:
   cupertino_icons:
+  dartz: ^0.10.1
   device_preview: ^1.2.0
+  dio: ^5.8.0+1
+  equatable: ^2.0.7
   expansion_tile_card: ^3.0.0
   firebase_core:
   flutter:
