--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dartz: ^0.10.1
   device_preview: ^1.2.0
   dio: ^5.8.0+1
+  dropdown_button2: ^2.3.9
   equatable: ^2.0.7
   expansion_tile_card: ^3.0.0
   firebase_core:
@@ -27,6 +28,7 @@ dependencies:
     sdk: flutter
   flutter_markdown: ^0.7.4+3
   # flutter_screenutil: ^5.9.3
+  flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.16
   get_it: ^8.0.2
   intl: ^0.19.0
@@ -34,6 +36,7 @@ dependencies:
   logger: ^2.5.0
   pin_code_fields: ^8.0.1
   shared_preferences: ^2.3.3
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   flutter_lints:
