--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   shared_preferences: ^2.3.3
   skeletonizer: ^1.4.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints:
