--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.16
   get_it: ^8.0.2
+  image_picker: ^1.1.2
   intl: ^0.19.0
   lock_orientation_screen: ^0.0.4
   logger: ^2.5.0
