--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   adaptive_theme: ^3.7.0
   auto_size_text: ^3.0.0
+  cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   connectivity_plus:
   cupertino_icons:
