--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   url_launcher:
 dev_dependencies:
   flutter_lints:
-  flutter_native_splash: ^2.4.3
+  flutter_native_splash:
   flutter_test:
     sdk: flutter
   very_good_analysis:
