--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,17 @@ dependencies:
   flutter_gemini:
   flutter_localizations:
     sdk: flutter
+  flutter_map: ^8.1.1
   flutter_markdown:
   flutter_screenutil:
   flutter_svg: 
+  geocoding: ^3.0.0
+  geolocator: ^13.0.4
   get_it:
+  http: ^1.3.0
   image_picker:
   intl: 
+  latlong2: ^0.9.1
   lock_orientation_screen:
   logger:
   pin_code_fields:
