--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   pin_code_fields:
   shared_preferences:
   skeletonizer:
+  translator: ^1.0.3+1
   url_launcher:
 dev_dependencies:
   flutter_lints:
