--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -85,5 +85,11 @@
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to provide better service.</string>
+
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need your location to provide better service even in the background.</string>
+
 </dict>
 </plist>
