feat: Implement expandable bio text widget and improve location display with capitalization; add readmore package for enhanced text handling

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   lock_orientation_screen:
   logger:
   pin_code_fields:
+  readmore: ^3.0.0
   shared_preferences:
   skeletonizer:
   translator: ^1.0.3+1
