--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_markdown:
   flutter_rating: 
   flutter_screenutil:
+  flutter_steps: ^1.0.5
   flutter_svg: 
   geocoding: 
   geolocator:
