feat: Implement Hive storage for message bubbles and sender types

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   geocoding: 
   geolocator:
   get_it:
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: 
   image_picker:
   intl: 
@@ -54,6 +56,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis:
+  build_runner:
+  hive_generator:
  
 flutter:
   uses-material-design: true
