--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,20 +44,23 @@ dependencies:
   latlong2: 
   lock_orientation_screen:
   logger:
+  path_provider: ^2.1.5
   pin_code_fields:
   readmore: ^3.0.0
   shared_preferences:
   skeletonizer:
   translator: ^1.0.3+1
   url_launcher:
+
+  
 dev_dependencies:
+  build_runner:
   flutter_lints:
   flutter_native_splash:
   flutter_test:
     sdk: flutter
-  very_good_analysis:
-  build_runner:
   hive_generator:
+  very_good_analysis:
  
 flutter:
   uses-material-design: true
