feat(payment): implement payment selection widget with card options
- Added PaymentSelectionWidget to allow users to select payment methods.
- Integrated SVG icons for MasterCard, Visa, PayPal, and Apple Pay.
- Updated payment appointment screen layout to include the new widget.
- Removed unnecessary text display for doctor and appointment ID.
- Adjusted asset paths in pubspec.yaml to include new payment SVGs.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/images/doctor_specialties/
     - assets/svg/
     - assets/svg/doctor_speciality/
+    - assets/svg/payment/
     - .env.prod
     - .env.dev
     - lang/en.json
