--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,7 @@
 analyzer:
   errors:
     no_default_cases: ignore
+    inference_failure_on_untyped_parameter: ignore   
 include: package:very_good_analysis/analysis_options.yaml
 linter:
   rules:
