--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   carousel_slider: 
   connectivity_plus:
   cupertino_icons:
+  custom_refresh_indicator: ^4.0.1
   dartz: 
   device_preview:
   dio: 
