--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   logger:
   path_provider: ^2.1.5
   pin_code_fields:
+  pull_to_refresh: ^2.0.0
   readmore: ^3.0.0
   shared_preferences:
   skeletonizer:
