feat: Implement local notification management for appointment reminders
- Added LocalNotificationService to handle scheduling and displaying notifications.
- Integrated image downloading for notifications with big picture style.
- Implemented notification permission requests for iOS and Android.
- Created methods for saving and retrieving notification preferences using SharedPreferences.
- Added functionality to cancel notifications and clear preferences.
- Removed legacy NotificationCacheManager code as it is no longer needed.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,16 +14,16 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
     namespace = "com.graduation.curai_app_mobile"
-    compileSdk = 34
+    compileSdk = 35
     ndkVersion = "25.1.8937393"
 
     compileOptions {
-      sourceCompatibility JavaVersion.VERSION_17
-      targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
-
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_17
+        jvmTarget = "17"
     }
 
     defaultConfig {
@@ -31,31 +31,42 @@ android {
         applicationId = "com.graduation.curai_app_mobile"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion 21  
-        targetSdkVersion 34
+        minSdkVersion 23  
+        targetSdkVersion 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
-    }
-    signingConfigs {
-        release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
-        }
-    }
+        multiDexEnabled true
 
+    }
+    // signingConfigs {
+    //     release {
+    //         keyAlias keystoreProperties['keyAlias']
+    //         keyPassword keystoreProperties['keyPassword']
+    //         storeFile file(keystoreProperties['storeFile'])
+    //         storePassword keystoreProperties['storePassword']
+    //     }
+    // }
     buildTypes {
         release {
-            signingConfig signingConfigs.release
-            shrinkResources true
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig = signingConfigs.getByName("debug")
         }
     }
+    // buildTypes {
+    //     release {
+    //         signingConfig signingConfigs.release
+    //         shrinkResources true
+    //         minifyEnabled true
+    //         proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    //     }
+    // }
 
 }
-
+dependencies {
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10")
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.4")
+    implementation("androidx.window:window:1.0.0")
+    implementation("androidx.window:window-java:1.0.0")
+}
 flutter {
     source = "../.."
 }
