Refactor app routes and update UI components for improved navigation and user experience; add cupertino_icons dependency in pubspec.yaml.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   adaptive_theme: 
   auto_size_text: 
   cached_network_image: 
-  collection:
   connectivity_plus:
+  cupertino_icons:
   dartz: 
   dio: 
   dropdown_button2:
