Add TextToSpeechManager for handling text-to-speech functionality
- Implemented a singleton class `TextToSpeechManager` to manage text-to-speech operations.
- Integrated Flutter TTS package for speech synthesis.
- Added methods for speaking, stopping, and pausing speech.
- Included logic to handle Arabic and English text based on input.
- Utilized a ValueNotifier to track speaking state.
- Cleaned input text by removing non-alphanumeric symbols before processing.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_screenutil:
   flutter_svg: 
   flutter_timezone:
+  flutter_tts: ^4.2.2
   geocoding: 
   geolocator:
   get_it:
