--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   cupertino_icons:
   dartz: 
   dio: 
-  dropdown_button2:
   equatable:
   expansion_tile_card:
   firebase_core:
@@ -28,11 +27,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_map: 
+  flutter_native_splash:
   flutter_rating: 
   flutter_screenutil:
   flutter_svg: 
   flutter_timezone:
-  flutter_tts: ^4.2.2
+  flutter_tts:
   geocoding: 
   geolocator:
   get_it:
@@ -42,7 +42,6 @@ dependencies:
   image_picker:
   intl: 
   latlong2: 
-  like_button:
   lock_orientation_screen:
   logger:
   path_provider: 
@@ -50,18 +49,17 @@ dependencies:
   pin_code_fields:
   pull_to_refresh:
   readmore:
-  sentry_flutter: ^8.14.2
+  sentry_flutter:
   shared_preferences:
   skeletonizer:
   timezone:
   toastification: 
-  translator: ^1.0.3+1
+  translator:
   url_launcher:
 
 dev_dependencies:
   build_runner:
   flutter_lints:
-  flutter_native_splash:
   flutter_test:
     sdk: flutter
   hive_generator:
