Add new SVG and PNG assets for icons and logos
- Added emergency_fill.png for emergency icon representation.
- Introduced calendar_fill.svg for calendar icon.
- Added home_fill.svg for home icon.
- Introduced profile_fill.svg for user profile icon.
- Added search_fill.svg for search functionality.
- Introduced social media logos: logo_apple.svg, logo_facebook.svg, logo_facebook_rectangle.svg, logo_google.svg, logo_website.svg, logo_whatsapp.svg, and logo_x.svg.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assets/svg/payment/
     - assets/svg/layout/
     - assets/launcher/
+    - assets/svg/social/
     - .env.prod
     - .env.dev
     - lang/en.json
