Refactor doctor model imports and introduce DoctorInfoModel
- Updated imports across multiple files to replace DoctorModel with DoctorInfoModel.
- Created DoctorInfoModel and DoctorReviews classes for better data handling.
- Introduced DoctorsModel to encapsulate a list of DoctorInfoModel instances.
- Adjusted method signatures to use named parameters for better readability.
- Added Hive type adapters for DoctorInfoModel and DoctorReviews for local storage.
- Modified various widgets and screens to accommodate the new model structure.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   adaptive_theme: 
   auto_size_text: 
   cached_network_image: 
+  collection: ^1.19.1
   connectivity_plus:
   cupertino_icons:
   dartz: 
