--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   equatable:
   expansion_tile_card:
   firebase_core:
+  fl_chart: ^1.0.0
   flutter:
     sdk: flutter
   flutter_advanced_switch:
